--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,44 +1,67 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     namespace 'com.ironsource.action_button'
-    compileSdk 32
-
+    compileSdkVersion versions.compileSdk
     defaultConfig {
         applicationId "com.ironsource.action_button"
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        minSdk versions.minSdk
+        targetSdk targetSdk
+        versionCode versions.code
+        versionName versions.name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        viewBinding true
+    }
+    compileOptions {
+        sourceCompatibility versions.javaVersion
+        targetCompatibility versions.javaVersion
+    }
+    kotlinOptions {
+        jvmTarget = versions.jvmTarget
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation libraries.kotlinStdlib
+
+    implementation libraries.appcompat
+    implementation libraries.material
+    implementation libraries.constraintLayout
+    implementation libraries.recyclerView
+
+    implementation libraries.coroutines
+
+    testImplementation libraries.junit
+    androidTestImplementation libraries.mockito
+
+    implementation libraries.dagger
+    implementation libraries.daggerAndroid
+    kapt libraries.daggerAndroidProcessor
+    kapt libraries.daggerCompiler
+
+    implementation libraries.retrofit
+    implementation libraries.converterGson
+    implementation libraries.loggingInterceptor
+    implementation libraries.okHttp3
+
+    implementation libraries.lifecycleViewmodelKtx
+    implementation libraries.lifecycleLivedataKtx
+    implementation libraries.lifecycleRuntimeKtx
+    implementation libraries.lifecycleViewmodelSavedstate
+    kapt libraries.lifecycleCommonJava8
+    implementation libraries.lifecycleReactivestreamsKtx
+
+    implementation libraries.timber
 }
