--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 include ':app'
+
+include ':features:welcome'
+include ':features:welcome:ui'
+include ':features:welcome:domain'
+include ':features:welcome:data'
