implement parser for json actions object

--- a/features/welcome/data/build.gradle
+++ b/features/welcome/data/build.gradle
@@ -28,6 +28,8 @@ android {
 }
 
 dependencies {
+    implementation project(':features:welcome:domain')
+
     implementation libraries.kotlinStdlib
 
     implementation libraries.appcompat
